# JiraApi

./: .gitignore  Readme.md  UnitTest.py  pyproject.toml
Auth/Token/: Token_Headers.py
Config/: Logs.py
Config/Auth/Token/: Token_Headers.py
Config/Server/: Server.py
JiraApi/: IssueVersions.py  Issues.py  JiraServer.py  MetaIssues.py  Projects.py
JiraApi/Common/: JiraServer.py
XrayApi/: TestExecutions.py  TestPlans.py  TestRepository.py  TestRuns.py  TestStatusDefinitions.py  Tests.py
XrayApi/1.0/: TestExecutions.py  Tests.py
XrayApi/1.0/Cucumber/: Export.py  Import.py
XrayApi/Common/: AbstractRequest.py  Response.py
XrayApi/Cucumber/: Export.py  Import.py
